# ws-python

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
